[package]
name = "query_processing"
version = "0.1.0"
edition = "2021"

[dependencies]
representation = { git = "https://github.com/DataTreehouse/representation"}
rayon = "1.6.0"
spargebra = { git = "https://github.com/DataTreehouse/spargebra"}
oxrdf = {version="0.1.7"}
polars = {version="0.35.4", features=["zip_with","performant", "semi_anti_join","abs", "round_series", "lazy", "concat_str", "is_in", "dtype-full", "strings", "horizontal_concat", "rows", "timezones", "polars-time", "temporal", "list_eval", "partition_by", "parquet", "diagonal_concat", "cross_join", "cum_agg", "coalesce"] }
log="0.4.19"
chrono = "0.4"
chrono-tz = "0.8"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}
thiserror="1.0.31"
env_logger = "0.10.0"

[dev-dependencies]
rstest = "0.18.2"